did some experiments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<div id="image_for_crop">
 		<input type="file" id="imageLoader" name="imageLoader"/>
 	</div>
+	<img id="placeholderImg" src="pully.png">
 
 	<script type="text/javascript" src="scripts/canvas.js"></script>
 </body>
