background picture enlarged by size

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<div id="image_for_crop">
 		<input type="file" id="imageLoader" name="imageLoader"/>
 	</div>
-	<img id="placeholderImg" src="pully.png">
+	<img id="placeholderImg" src="assets/pully.png">
 
 	<script type="text/javascript" src="scripts/canvas.js"></script>
+	<script type="text/javascript" src="scripts/RGBA.js"></script>
 </body>
 </html>
