Now it correctly resizes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="utf-8">
 	<title>Canvas to Button</title>
 	<link rel="stylesheet" href="main.css">
+	<link rel="shortcut icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAABjSURBVChTY/wPBAxQwMjICGWhAiQlDExQGqx4Z1U4lIcAIDEUg6A2/AdKgGl0gC4HpHErhgFkNSC7ILqQ3IkNwJwF9wOxgE4aMIIODaAEOXoooAN0ObgKZAlkjG4QiUmDgQEAzdKWF5J2Dj0AAAAASUVORK5CYII=" />
 </head>
-<body onload="draw(5)">
-	<button id="button" class="_button" style="
-    background-image: url('assets/pullybg.png');">Play</button>
+<body onload="draw(5)" style="background: beige;">
+	<button id="_button">Play</button>
 
 	<script type="text/javascript" src="scripts/canvas.js"></script>
 	<script type="text/javascript" src="scripts/RGBA.js"></script>
 </body>
 </html>
+<!-- style=" background-image: url('assets/pullybg.png'); " -->
