chrome bug fixed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<button id="dontPixelate" style="
     width: 200px; 
     height: 50px; 
-    background-color: #ffffff;" data-pixelate>Nay</button>
+    background-image: url('assets/pullybg.png');
+    background-color: white;  " data-pixelate>Nay</button>
 
-	<script type="text/javascript" src="scripts/canvas.js"></script>
+	<script type="text/javascript" src="scripts/canvas.min.js"></script>
 	<script type="text/javascript" src="scripts/RGBA.js"></script>
 </body>
 </html>
