--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<link rel="shortcut icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAABjSURBVChTY/wPBAxQwMjICGWhAiQlDExQGqx4Z1U4lIcAIDEUg6A2/AdKgGl0gC4HpHErhgFkNSC7ILqQ3IkNwJwF9wOxgE4aMIIODaAEOXoooAN0ObgKZAlkjG4QiUmDgQEAzdKWF5J2Dj0AAAAASUVORK5CYII=" />
 </head>
 <body onload="draw(5)" style="background: beige;">
-	<button class="_button" data-pixelate>Play</button>
+	<button class="_button" data-pixelate="bg">Play</button>
 	<button id="dontPixelate" style="
     width: 200px; 
     height: 50px; 
     background-image: url('assets/pullybg.png');
-    background-color: white;  " data-pixelate>Nay</button>
+    background-color: white;  " data-pixelate="bg">Nay</button>
 
 	<script type="text/javascript" src="scripts/canvas.js"></script>
 	<script type="text/javascript" src="scripts/RGBA.js"></script>
